--- a/procedure/procedure.tex
+++ b/procedure/procedure.tex
@@ -42,7 +42,7 @@ The script source files and setup can be found at :
 \thispagestyle{plain}
 \tableofcontents
 
-
+\newpage
 \section{Manual procedure}
 \label{sec:full_procedure}
 
@@ -257,16 +257,16 @@ If the exports are correct, with the same number of points, just skip this step.
 The time points for TG and baseline may not be the same. If it is the case, we will want to interpolate the baseline mass loss data in order to get the correct values to substract from TG ones, since the baseline data does not follow a predictable model.
 
 
-\subsection{Plotting graphs}
+% \subsection{Plotting graphs}
 
 
-\subsubsection{For TG}
+% \subsubsection{For TG}
 
 
-\subsubsection{For MS}
+% \subsubsection{For MS}
 
 
-\subsubsection{Plot TGMS graph}
+% \subsubsection{Plot TGMS graph}
 
 
 \section{Origin scripting for automated plots}
@@ -360,10 +360,6 @@ Then, execute the plot program:
 run.file("C:\Program Files\Origin2016\tgmsplot-script\plot.ogs")
 \end{codebox}
 
-
-\subsubsection{Script and execution details}
-
-The source folder contains the following files:
 
 \iffalse
 \begin{wide}
